# satellite-ml-pipeline

./: .gitignore  ARCHITECTURE.md  README.md  RESTRUCTURING.md  SUMMARY.md  constants.py  pyproject.toml  requirements.txt  run_batch_inference.py
api/: app.py
core_pipeline/: batch_inferences.py  constants.py  exceptions.py  ingest.py  observability.py  tile.py  types.py  validate.py
model/: features.py  health.py  inferences.py  registry.py  train.py  train_from_tiles.py
model/models/: latest_model.json
orchestration/dags/: batch_inference_dag.py
shared/: __init__.py  config.py  constants.py  data_utils.py  observability.py  types.py
utils/: data.py  logging.py  types_.py
